# owocr

./: .editorconfig  .gitignore  .gitmodules  README.md  entitlements.plist  generate_lens_bindings.sh  livetexthelper  owocr.icns  owocr.spec  owocr_config.ini  owocr_linux.spec  owocr_mac.spec  owocr_win.spec  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: build-binary-linux.yml  build-binary-mac.yml  build-binary-win.yml  build-linux-arm.yml  build-linux.yml  build-macos-intel.yml  build-macos.yml  build-sdist-wheel.yml  build-windows.yml  manual-build-linux-arm.yml  manual-build-linux.yml  manual-build-mac-intel.yml  manual-build-mac.yml  manual-build-windows.yml  manual-build.yml  package.yml  release.yml
livetexthelper_src/: LICENSE
livetexthelper_src/LiTeX/: LiveTextCLI.swift
livetexthelper_src/litex.xcodeproj/: project.pbxproj
livetexthelper_src/litex.xcodeproj/xcshareddata/xcschemes/: LiveTextPlayground.xcscheme  Release.xcscheme
manga_ocr/: __init__.py  __main__.py  ocr.py  run.py
owocr/: __init__.py  __main__.py  api.html  boot.py  config.py  config_editor.py  lens_betterproto.py  log_viewer.py  ocr.py  run.py  screen_coordinate_picker.py  tray_icon.py  wayland_mss_shim.py
owocr/lens_protos/: aim_communication_pb2.py  lens_overlay_client_context_pb2.py  lens_overlay_cluster_info_pb2.py  lens_overlay_deep_gleam_data_pb2.py  lens_overlay_image_crop_pb2.py  lens_overlay_image_data_pb2.py  lens_overlay_knowledge_intent_query_pb2.py  lens_overlay_knowledge_query_pb2.py  lens_overlay_math_solver_query_pb2.py  lens_overlay_message_set_pb2.py  lens_overlay_platform_pb2.py  lens_overlay_request_type_pb2.py  lens_overlay_selection_type_pb2.py  lens_overlay_service_deps_pb2.py  lens_overlay_stickiness_signals_pb2.py  lens_overlay_surface_pb2.py  lens_overlay_text_pb2.py  lens_overlay_text_query_pb2.py  lens_overlay_translate_stickiness_signals_pb2.py  lens_overlay_visual_input_type_pb2.py  lens_overlay_visual_search_interaction_data_pb2.py
owocr/py_lens/: aim_communication_pb2.py  aim_query_pb2.py  lens_overlay_client_context_pb2.py  lens_overlay_client_logs_pb2.py  lens_overlay_client_platform_pb2.py  lens_overlay_cluster_info_pb2.py  lens_overlay_contextual_inputs_pb2.py  lens_overlay_deep_gleam_data_pb2.py  lens_overlay_document_pb2.py  lens_overlay_filters_pb2.py  lens_overlay_geometry_pb2.py  lens_overlay_image_crop_pb2.py  lens_overlay_image_data_pb2.py  lens_overlay_interaction_request_metadata_pb2.py  lens_overlay_knowledge_intent_query_pb2.py  lens_overlay_knowledge_query_pb2.py  lens_overlay_math_solver_query_pb2.py  lens_overlay_message_set_pb2.py  lens_overlay_overlay_object_pb2.py  lens_overlay_payload_pb2.py  lens_overlay_phase_latencies_metadata_pb2.py  lens_overlay_platform_pb2.py  lens_overlay_polygon_pb2.py  lens_overlay_request_id_pb2.py  lens_overlay_request_type_pb2.py  lens_overlay_routing_info_pb2.py  lens_overlay_selection_type_pb2.py  lens_overlay_server_pb2.py  lens_overlay_service_deps_pb2.py  lens_overlay_stickiness_signals_pb2.py  lens_overlay_surface_pb2.py  lens_overlay_text_pb2.py  lens_overlay_text_query_pb2.py  lens_overlay_translate_stickiness_signals_pb2.py  lens_overlay_video_context_input_params_pb2.py  lens_overlay_video_params_pb2.py  lens_overlay_visual_search_interaction_data_pb2.py  lens_overlay_visual_search_interaction_log_data_pb2.py
owocr/pywayland_ext_data_control_v1/: __init__.py  ext_data_control_device_v1.py  ext_data_control_manager_v1.py  ext_data_control_offer_v1.py  ext_data_control_source_v1.py
owocr/screenai_protos/: chrome_screen_ai_pb2.py  view_hierarchy_pb2.py
