[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owocr"
version = "1.23.1"
description = "Japanese OCR"
readme = "README.md"
requires-python = ">=3.11"
authors = [
]
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "jaconv",
    "loguru",
    "numpy",
    "Pillow>=10.0.0",
    "pynputfix",
    "websockets>=14.0",
    "desktop-notifier>=6.1.0",
    "pystrayfix",
    "mss>=10.1.0",
    "psutil",
    "curl_cffi",
    "pywin32;platform_system=='Windows'",
    "pyobjc;platform_system=='Darwin'",
    "pyperclip;platform_system=='Linux'",
    "PyGObject;platform_system=='Linux'",
    "dbus-python;platform_system=='Linux'",
    "pywayland;platform_system=='Linux'",
]

[project.optional-dependencies]
faster-png = [
    "fpng-py"
]

easyocr = [
    "easyocr"
]

rapidocr = [
    "rapidocr>=3.4.0",
    "onnxruntime"
]

meikiocr = [
    "meikiocr>=0.1.4"
]

mangaocr = [
    "manga-ocr",
    "setuptools<80",
    "scipy",
    "pyclipper",
    "torchvision",
    "torch-summary",
    "opencv-python",
    "shapely"
]

winocr = [
    "winocr"
]

oneocr = [
    "oneocr>=1.0.9"
]

lens = [
    "protobuf>=6.33.2"
]

gvision = [
    "google-cloud-vision"
]

azure = [
    "azure-ai-vision-imageanalysis"
]

[project.urls]
Homepage = "https://github.com/AuroraWright/owocr"

[project.scripts]
owocr = "owocr.__main__:main"
owocr_config = "owocr.config_editor:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["owocr*", "comic_text_detector*"]

[tool.setuptools.package-data]
comic_text_detector = ["LICENSE"]
