[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owocr"
dynamic = ["version"]
description = "Optical character recognition for Japanese text"
readme = "README.md"
requires-python = ">=3.11"  # onnxruntime is not yet available for Python 3.14
authors = [
    {name = "AuroraWright", email = "fallingluma@gmail.com"}
]
license = "GPL-3.0-only"
license-files = [
    "LICENSE"
]
keywords = [
    "ocr",
    "screen-capture",
]
# https://pypi.org/classifiers/
classifiers = [
    "Natural Language :: English",  # The software itself uses English in its messages
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia",
    "Topic :: Utilities",
]
dependencies = [
    "jaconv",
    "loguru",
    "numpy",
    "Pillow>=10.0.0",
    "pynputfix",
    "websockets>=14.0",
    "desktop-notifier>=6.1.0",
    "pystrayfix",
    "mss>=10.1.0",
    "psutil",
    "curl_cffi",
    "pywin32;platform_system=='Windows'",
    "pyobjc;platform_system=='Darwin'",
    "pyperclip;platform_system=='Linux'",
    "PyGObject;platform_system=='Linux'",
    "dbus-python;platform_system=='Linux'",
    "pywayland;platform_system=='Linux'",
]

# If adding a new extra, remember to add it to the GitHub Actions workflow too!
[project.optional-dependencies]
faster-png = [
    "fpng-py-fix"
]

easyocr = [
    "easyocr"
]

rapidocr = [
    "rapidocr>=3.4.0",
    "onnxruntime"
]

meikiocr = [
    "meikiocr>=0.1.4"
]

mangaocr = [
    "manga-ocr",
    "setuptools<80",
    "scipy",
    "pyclipper",
    "torchvision",
    "torch-summary",
    "opencv-python",
    "shapely",
    "transformers<5.0.0"
]

winocr = [
    "winocrfix;platform_system=='Windows'"
]

oneocr = [
    "oneocr>=1.0.11;platform_system=='Windows'"
]

lens = [
    "protobuf>=6.33.2"
]

gvision = [
    "google-cloud-vision"
]

azure = [
    "azure-ai-vision-imageanalysis"
]

[dependency-groups]
binary = [
    "pyinstaller",
    "pip_system_certs",
]

[project.urls]
Repository = "https://github.com/AuroraWright/owocr"
Issues = "https://github.com/AuroraWright/owocr/issues"

[project.scripts]
owocr = "owocr.__main__:main"
owocr_config = "owocr.config_editor:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "owocr.__version__"}

[tool.setuptools.packages.find]
include = ["owocr*", "comic_text_detector*"]

[tool.setuptools.package-data]
comic_text_detector = ["LICENSE"]
